# QuantumGo

./: DEPLOYMENT_CHECKLIST.md  README_LEADERBOARD.md  docker-compose.yml  vercel.json
backend/quantum-go-api-main/: Cargo.toml  Dockerfile  README.md
backend/quantum-go-api-main/.github/workflows/: docker-build.yml
backend/quantum-go-api-main/src/: ai.rs  api.rs  db.rs  entity.rs  main.rs  rating.rs  ws.rs
free-deployment/: FREE_DEPLOYMENT_GUIDE.md  correct-supabase-setup.sql  netlify.toml  supabase-setup.sql  vercel.json
frontend/quantum-go-web-master/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vite.config.ts
frontend/quantum-go-web-master/.github/workflows/: docker-build.yml
frontend/quantum-go-web-master/src/: App.vue  config.ts  main.ts
frontend/quantum-go-web-master/src/assets/style/: theme.css
frontend/quantum-go-web-master/src/components/BarrageComponent/: index.scss  index.vue
frontend/quantum-go-web-master/src/router/: index.ts
frontend/quantum-go-web-master/src/store/: index.ts
frontend/quantum-go-web-master/src/utils/: api.ts  chess.ts  chess2.ts  supabase-connection-test.ts  supabase-room.ts  supabase-test.ts  supabase.ts  tools.ts  types.ts
frontend/quantum-go-web-master/src/views/: TestAIPage.vue
quantum-go-integration/: CLOUD_DEPLOYMENT_GUIDE.md  INSTALLATION_GUIDE.md  quantum-go-integration.php  readme.txt
wordpress-plugin/: quantum-go-integration.php  readme.txt
wordpress-plugin/assets/: script.js  style.css
(+17 files in other folders)
