[package]
name = "quantum-go-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["ws", "macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
headers = { version = "0.4.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.16.0", features = ["v4", "serde", "borsh"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.0"
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "postgres",
    "tls-native-tls",
    "uuid",
] }
bcrypt = "0.17.0"
